[gd_scene load_steps=24 format=2]

[ext_resource path="res://artifacts/graphics/fields/village.png" type="Texture" id=1]
[ext_resource path="res://artifacts/graphics/troops/blue/spearman_blue.svg" type="Texture" id=2]
[ext_resource path="res://artifacts/graphics/troops/blue/cavalry_blue.svg" type="Texture" id=3]
[ext_resource path="res://artifacts/graphics/fields/forest.png" type="Texture" id=4]
[ext_resource path="res://artifacts/graphics/troops/blue/doubleaxfighter_blue.svg" type="Texture" id=5]
[ext_resource path="res://artifacts/graphics/troops/blue/shortswordsman_blue.svg" type="Texture" id=6]
[ext_resource path="res://artifacts/graphics/troops/blue/crossbowman_blue.svg" type="Texture" id=7]
[ext_resource path="res://artifacts/fonts/OstrichSans-Heavy.otf" type="DynamicFontData" id=8]
[ext_resource path="res://artifacts/graphics/fields/mountain.png" type="Texture" id=9]
[ext_resource path="res://classes/game/view/windows/troopselection/troopselectionbutton/TroopSelectionButton.gd" type="Script" id=10]
[ext_resource path="res://artifacts/graphics/fields/grass.png" type="Texture" id=11]
[ext_resource path="res://artifacts/graphics/troops/blue/archer_blue.svg" type="Texture" id=12]
[ext_resource path="res://artifacts/graphics/troops/blue/halberdier_blue.svg" type="Texture" id=13]
[ext_resource path="res://artifacts/graphics/troops/blue/battleaxfighter_blue.svg" type="Texture" id=14]
[ext_resource path="res://artifacts/graphics/troops/blue/trebuchet_blue.svg" type="Texture" id=15]
[ext_resource path="res://artifacts/graphics/troops/blue/swordsman_blue.svg" type="Texture" id=16]
[ext_resource path="res://artifacts/graphics/troops/blue/catapult_blue.svg" type="Texture" id=17]
[ext_resource path="res://artifacts/graphics/troops/blue/knight_blue.svg" type="Texture" id=18]
[ext_resource path="res://artifacts/graphics/fields/castle.png" type="Texture" id=19]
[ext_resource path="res://artifacts/graphics/fields/checked-shield.svg" type="Texture" id=20]
[ext_resource path="res://artifacts/graphics/fields/battle-axe.svg" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
extra_spacing_space = -1
font_data = ExtResource( 8 )

[sub_resource type="ImageTexture" id=2]

[node name="TroopSelectionButton" type="MarginContainer"]
margin_right = 410.0
margin_bottom = 145.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 405.0
margin_bottom = 140.0
rect_min_size = Vector2( 400, 135 )
toggle_mode = true

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
margin_right = 408.0
margin_bottom = 138.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitelContainer" type="MarginContainer" parent="Button/VBoxContainer"]
margin_right = 408.0
margin_bottom = 27.0
custom_constants/margin_right = 0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/VBoxContainer/TitelContainer"]
margin_top = 5.0
margin_right = 408.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Swordsman"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 27.0
margin_right = 408.0
margin_bottom = 138.0

[node name="IconBox" type="MarginContainer" parent="Button/VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 111.0
custom_constants/margin_right = 10
custom_constants/margin_top = 16
custom_constants/margin_left = 2
custom_constants/margin_bottom = 15

[node name="TextureRect" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/IconBox"]
margin_left = 2.0
margin_top = 16.0
margin_right = 82.0
margin_bottom = 96.0
rect_min_size = Vector2( 80, 80 )
texture = SubResource( 2 )
expand = true

[node name="InfoBox" type="VBoxContainer" parent="Button/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 396.0
margin_bottom = 111.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 0

[node name="Grid" type="GridContainer" parent="Button/VBoxContainer/HBoxContainer/InfoBox"]
margin_right = 300.0
margin_bottom = 80.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4

[node name="HP" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "HP"
valign = 1

[node name="HP_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 100.0
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )
text = "350"
valign = 1

[node name="Price" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "Price:"
valign = 1

[node name="Price_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 250.0
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 20 )
text = "40"
valign = 1

[node name="AttDamage" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
text = "Att Damage:"
valign = 1

[node name="AttDamage_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 100.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 20 )
text = "30"
valign = 1

[node name="Salary" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 150.0
margin_top = 20.0
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 20 )
text = "Salary:"
valign = 1

[node name="Salary_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 250.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 20 )
text = "4"
valign = 1

[node name="DefDamage" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )
text = "Def Damage:"
valign = 1

[node name="DefDamage_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 100.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 20 )
text = "35"
valign = 1

[node name="BuildTime" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 150.0
margin_top = 40.0
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 20 )
text = "Build Time:"
valign = 1

[node name="BuildTime_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 250.0
margin_top = 43.0
margin_right = 300.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 0 )
text = "1"
valign = 1

[node name="FieldBonus" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 20 )
text = "Field Bonus:"
valign = 1

[node name="BonusFields" type="HBoxContainer" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 100.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Village_att" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Village_att"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest_att" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 4 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Forest_att"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass_att" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 11 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Grass_att"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mountain_att" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 9 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Mountain_att"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castle_att" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 19 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Castle_att"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Village_def" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Village_def"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest_def" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 4 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Forest_def"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass_def" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 11 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Grass_def"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mountain_def" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 9 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Mountain_def"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castle_def" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 19 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid/BonusFields/Castle_def"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 150.0
margin_top = 60.0
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 20 )
text = "Speed:"
valign = 1

[node name="Speed_v" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/Grid"]
margin_left = 250.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 50, 20 )
text = "4"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Button/VBoxContainer/HBoxContainer/InfoBox"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 94.0

[node name="TroopBonusBox" type="HBoxContainer" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer"]
margin_right = 300.0
margin_bottom = 14.0

[node name="TroopBonus" type="Label" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox"]
margin_right = 84.0
margin_bottom = 14.0
text = "Troop Bonus:"

[node name="HBoxContainer" type="HBoxContainer" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox"]
margin_left = 88.0
margin_right = 88.0
margin_bottom = 14.0

[node name="Cavalary" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 3 )
expand = true

[node name="Archer" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 12 )
expand = true

[node name="Doubleaxfighter" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 5 )
expand = true

[node name="Shortswordsman" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 6 )
expand = true

[node name="Spearman" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 2 )
expand = true

[node name="Battleaxfighter" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 14 )
expand = true

[node name="Catapult" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 17 )
expand = true

[node name="Crossbowman" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 7 )
expand = true

[node name="Swordsman" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 16 )
expand = true

[node name="Halberdier" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 13 )
expand = true

[node name="Knight" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 18 )
expand = true

[node name="Trebuchet" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 15 )
expand = true

[node name="Castle" type="TextureRect" parent="Button/VBoxContainer/HBoxContainer/InfoBox/MarginContainer/TroopBonusBox/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 19 )
expand = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
